discussion/kv_engine/141635/141635_rev50_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Define bootstrap interface [2.2/3]

Define a bootstrap interface during startup and allow
for starting up without any interfaces.

Change-Id: I1bf375dedddfd20902607e235bb0aaadb0d835e5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-14 11:41:18.000000000
Message: 
Uploaded patch set 50: Patch Set 49 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 12:39:11.000000000
Message: 
Patch Set 50: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9858/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9858/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9858/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11855/ : FAILURE

Failure of GoogleTest "KVStoreParam/KVStoreParamTest.CompactAndScan/magma":

<pre>
[ RUN      ] KVStoreParam/KVStoreParamTest.CompactAndScan/magma
[2021-06-14T12:36:19.761Z] ../kv_engine/engines/ep/tests/module_tests/kvstore_test.cc:862: Failure
[2021-06-14T12:36:19.761Z] Failed
[2021-06-14T12:36:19.761Z] initBySeqnoScanContext returned nullptr
[2021-06-14T12:36:19.761Z] [  FAILED  ] KVStoreParam/KVStoreParamTest.CompactAndScan/magma, where GetParam() = "magma" (1218 ms)
KVStoreParam/KVStoreParamTest.CompactAndScan/magma
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11855/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8447/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36847/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/369/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31482/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10510/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11582/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11430/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19444/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
